# demo-api

./: .env.server  .gitignore  .travis.yml  Dockerfile  README.md  demo-api.cabal  docker-compose.yml  skeleton-haskell.cabal  stack.yaml
client/: Dockerfile  package.json  server.js  webpack-assets.json  webpack.config.js
client/public/: indextemplate.html
client/src/: app.js  greeting.js
client/src/components/: Root.js
client/src/components/CreateDemo/: CreateDemo.js
data/: create_demo_request.json
data/sql/: V001__Create_demos_table.sql
scripts/: auto-reload.sh  build_client.sh  ghci.sh  migrate_db.sh  run_migration.py  send_demo_request
server/: Dockerfile  demo-api.cabal
server/src/: Json.hs  Main.hs  Routes.hs  Types.hs
server/src/Database/: Queries.hs
src/: Json.hs  Main.hs  Routes.hs  Types.hs
