name:                demo-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dbousamra/demo-api#readme
license:             MIT
author:              Dominic Bou-Samra
maintainer:          dominic.bou.samra@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable demo-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , wai
                     , wai-extra
                     , http-types
                     , text
                     , bytestring
                     , aeson
                     , postgresql-simple
  other-modules:       Types
                     , Routes
                     , Json